<resources>
    <string name="app_name">PetHub Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username or e-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">register</string>
    <string name="forgotpass">forgot password?</string>
    <string name="facebook">Facebook</string>
</resources>